unpackaged/main/default/objects/CRC_Request_Action__c/CRC_Request_Action__c.object-meta.xml
<CustomObject>
    <label>CRC Request Action</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Action Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRC Request Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>