unpackaged/main/default/objects/CRC_Request_Action__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>