unpackaged/main/default/objects/CRC_Request_Action__c/fields/Action_URL__c.field-meta.xml
<CustomField>
    <fullName>Action_URL__c</fullName>
    <formula>$Setup.T1_Control_Settings__c.Internal_URL__c &amp; &quot;/&quot; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action_URL</label>
    <type>Text</type>
</CustomField>