unpackaged/main/default/objects/CRC_Request_Action__c/fields/Actioner_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Actioner_First_Name__c</fullName>
    <formula>Assigned_To__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actioner First Name</label>
    <type>Text</type>
</CustomField>