unpackaged/main/default/objects/CRC_Request_Action__c/fields/Actual_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date__c</fullName>
    <inlineHelpText>The actual date the action occurred.</inlineHelpText>
    <label>Actual Date</label>
    <type>Date</type>
</CustomField>