unpackaged/main/default/objects/CRC_Request_Action__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CPEC_Request_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>