unpackaged/main/default/objects/CRC_Request_Action__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <label>Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>