unpackaged/main/default/objects/CRC_Request_Action__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>