unpackaged/main/default/objects/CRC_Request_Action__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CRC_Request__c</columns>
    <columns>Action__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Actual_Date__c</columns>
    <columns>Completed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>